--- a/index.html
+++ b/index.html
@@ -1,88 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" text="text/css">
-    <title>Резюме-Толкованов-Николай</title>
+    <link rel="stylesheet" href="/css/vendor/styleVendor.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div class="profile">
-            <div class="profile-photo">
-                <img src="me-without-bg.png" alt="my-face">
+            <div class="profile__photo">
+                <img src="./images/static/me-without-bg.webp" alt="my-face" />
             </div>
-            <div class="profile-info">
-                <h2>ОБО МНЕ</h2>
-                <p>Привет! Я - веб-разработчик. Создаю сайты и приложения, которые выглядят красиво, качественно работают и не приносят боль.<br><br> Работаю быстро и аккуратно, а то обед остынет. Связаться со мной можно 24\7.</p>
-                <div class="contacts">
-                    <div class="contacts-item">
-                        <h3># Номер телефона</h3>
-                        <p>+79616654412</p>
+            <div class="profile__info">
+                <h2 class="profile__info-title">ОБО МНЕ</h2>
+                <p class="profile__info-subtitle">
+                    Привет! Я - веб-разработчик. Создаю сайты и приложения, которые
+                    выглядят красиво, качественно работают и не приносят боль.<br /><br />
+                    Работаю быстро и аккуратно, а то обед остынет. Связаться со мной
+                    можно 24\7.
+                </p>
+                <div class="profile__contacts">
+                    <div class="profile__contacts-item">
+                        <h3 class="profile__contacts-item-title"># Номер телефона</h3>
+                        <p class="profile__contacts-item-subtitle">+79616654412</p>
                     </div>
-                    <div class="contacts-item">
-                        <h3>@ Email</h3>
-                        <p>tnrvlg@gmail.com</p>
+                    <div class="profile__contacts-item">
+                        <h3 class="profile__contacts-item-title">@ Email</h3>
+                        <p class="profile__contacts-item-subtitle">tnrvlg@gmail.com</p>
                     </div>
-                    <div class="contacts-item">
-                        <h3>Место проживания</h3>
-                        <p>Россия, г.Волгоград</p>
+                    <div class="profile__contacts-item">
+                        <h3 class="profile__contacts-item-title">Место проживания</h3>
+                        <p class="profile__contacts-item-subtitle">Россия, г.Волгоград</p>
                     </div>
-                    <div class="contacts-item">
-                        <h3>Мой github</h3>
-                        <p>
-                            <a href="https://github.com/NikolayTolkovanov-front">https://github.com/NikolayTolkovanov-front</a>
+                    <div class="profile__contacts-item">
+                        <h3 class="profile__contacts-item-title">Мой github</h3>
+                        <p class="profile__contacts-item-subtitle">
+                            <a class="profile__contacts-item-link" href="https://github.com/NikolayTolkovanov-front"
+                                >https://github.com/NikolayTolkovanov-front</a
+                            >
                         </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="resume">
-            <div class="resume-wrap">
-                <div class="about">
-                    <div class="about-name">
-                        <h1>Николай Толкованов</h1>
-                        <p>web-developer</p>
+            <div class="resume__wrap">
+                <div class="resume__about">
+                    <div class="resume__about-name">
+                        <h1 class="resume__about-name-title">Николай Толкованов</h1>
+                        <p class="resume__about-name-subtitle">web-developer</p>
                     </div>
-                    <div class="about-contacts">
-                        <p>T: +79616654412</p>
-                        <p>E: tnrvlg@gmail.com</p>
+                    <div class="resume__about-contacts">
+                        <p class="resume__about-contacts-phone">T: +79616654412</p>
+                        <p class="resume__about-contacts-email">E: tnrvlg@gmail.com</p>
                     </div>
                 </div>
-                <div class="skills">
-                    <h2>Навыки</h2>
-                    <ul class="list">
-                        <li class="list-item">
-                            <h4 class="list-item_title">Веб-разработка</h4>
-                            <p class="list-item_text">
-                                — Создание одностраничных, многостраничных
-                                сайтов, SPA-приложений<br><br>
-                                — Разработка сайтов под CMS Wordpress<br><br>
-                                — Верстка страницы по стандартам HTML 5, CSS 3<br><br>
-                                — Работаю с CSS-препроцессорами LESS, SASS<br><br>
-                                — Владение ЯП: PHP, JS, PYTHON, JAVA<br><br>
-                                — Активная работа с Git, Github<br><br>
-                                — Владение фреймворком Vue.js<br><br>
-                                — Работа с VS Code, Notepad++, Sublime Text<br><br>
-                                — Работа с операционнымим системами Windows, Linux<br><br> 
+                <div class="resume__skills">
+                    <h2 class="resume__skills-title">Навыки</h2>
+                    <ul class="resume__list">
+                        <li class="resume__list-item">
+                            <h4 class="resume__list-item-title">Веб-разработка</h4>
+                            <p class="resume__list-item-text">
+                                — Создание одностраничных, многостраничных сайтов,
+                                SPA-приложений<br /><br />
+                                — Разработка сайтов под CMS Wordpress<br /><br />
+                                — Верстка страницы по стандартам HTML 5, CSS 3<br /><br />
+                                — Работаю с CSS-препроцессорами LESS, SASS<br /><br />
+                                — Владение ЯП: PHP, JS, PYTHON, JAVA<br /><br />
+                                — Активная работа с Git, Github<br /><br />
+                                — Владение фреймворком Vue.js<br /><br />
+                                — Работа с VS Code, Notepad++, Sublime Text<br /><br />
+                                — Работа с операционнымим системами Windows, Linux<br /><br />
                             </p>
                         </li>
-                        <li class="list-item">
-                            <h4 class="list-item_title">Коммуникабельность</h4>
-                            <p class="list-item_text">
-                                — умение быстро знакомиться с людьми<br><br>
-                                — умение понять проблему человека и как её решить<br><br>
-                                — умение хорошо относиться к собеседнику<br><br>
-                                — умение общаться с клиентами<br><br>
+                        <li class="resume__list-item">
+                            <h4 class="resume__list-item-title">Коммуникабельность</h4>
+                            <p class="resume__list-item-text">
+                                — умение быстро знакомиться с людьми<br /><br />
+                                — умение понять проблему человека и как её решить<br /><br />
+                                — умение хорошо относиться к собеседнику<br /><br />
+                                — умение общаться с клиентами<br /><br />
                             </p>
                         </li>
-                        <li class="list-item">
-                            <h4 class="list-item_title">Личные качества</h4>
-                            <p class="list-item_text">
-                                — ответственность<br><br>
-                                — честность<br><br>
-                                — любознательность<br><br>
-                                — стрессоустойчивость<br><br>
+                        <li class="resume__list-item">
+                            <h4 class="resume__list-item-title">Личные качества</h4>
+                            <p class="resume__list-item-text">
+                                — ответственность<br /><br />
+                                — честность<br /><br />
+                                — любознательность<br /><br />
+                                — стрессоустойчивость<br /><br />
                             </p>
                         </li>
                     </ul>
@@ -91,4 +102,5 @@
         </div>
     </div>
 </body>
+
 </html>
