Добавлены новые разделы

--- a/index.html
+++ b/index.html
@@ -13,92 +13,126 @@
 <body>
     <div class="container">
         <div class="profile">
-            <div class="profile__photo">
-                <img src="./images/static/me-without-bg.webp" alt="my-face" />
-            </div>
-            <div class="profile__info">
-                <h2 class="profile__info-title">ОБО МНЕ</h2>
-                <p class="profile__info-subtitle">
-                    Привет! Я - веб-разработчик. Создаю сайты и приложения, которые
-                    выглядят красиво, качественно работают и не приносят боль.<br /><br />
-                    Работаю быстро и аккуратно, а то обед остынет. Связаться со мной
-                    можно 24\7.
+          <div class="profile__photo">
+            <img src="./images/static/me-without-bg.webp" alt="my-face" />
+          </div>
+          <div class="profile__info">
+            <h2 class="profile__info-title">ОБО МНЕ</h2>
+            <p class="profile__info-subtitle">
+              Привет! Я - веб-разработчик. Создаю сайты и приложения, которые выглядят
+              красиво и качественно работают. Связаться со мной можно 24\7.
+            </p>
+            <div class="profile__contacts">
+              <div class="profile__contacts-item">
+                <h3 class="profile__contacts-item-title"># Номер телефона</h3>
+                <p class="profile__contacts-item-subtitle">+79616654412</p>
+              </div>
+              <div class="profile__contacts-item">
+                <h3 class="profile__contacts-item-title">@ Email</h3>
+                <p class="profile__contacts-item-subtitle">tnrvlg@gmail.com</p>
+              </div>
+              <div class="profile__contacts-item">
+                <h3 class="profile__contacts-item-title">Место проживания</h3>
+                <p class="profile__contacts-item-subtitle">Россия, г.Волгоград</p>
+              </div>
+              <div class="profile__contacts-item">
+                <h3 class="profile__contacts-item-title">Мой github</h3>
+                <p class="profile__contacts-item-subtitle">
+                  <a
+                    class="profile__contacts-item-link"
+                    href="https://github.com/NikolayTolkovanov-front"
+                    >https://github.com/NikolayTolkovanov-front</a
+                  >
                 </p>
-                <div class="profile__contacts">
-                    <div class="profile__contacts-item">
-                        <h3 class="profile__contacts-item-title"># Номер телефона</h3>
-                        <p class="profile__contacts-item-subtitle">+79616654412</p>
-                    </div>
-                    <div class="profile__contacts-item">
-                        <h3 class="profile__contacts-item-title">@ Email</h3>
-                        <p class="profile__contacts-item-subtitle">tnrvlg@gmail.com</p>
-                    </div>
-                    <div class="profile__contacts-item">
-                        <h3 class="profile__contacts-item-title">Место проживания</h3>
-                        <p class="profile__contacts-item-subtitle">Россия, г.Волгоград</p>
-                    </div>
-                    <div class="profile__contacts-item">
-                        <h3 class="profile__contacts-item-title">Мой github</h3>
-                        <p class="profile__contacts-item-subtitle">
-                            <a class="profile__contacts-item-link" href="https://github.com/NikolayTolkovanov-front"
-                                >https://github.com/NikolayTolkovanov-front</a
-                            >
-                        </p>
-                    </div>
-                </div>
+              </div>
             </div>
+          </div>
         </div>
         <div class="resume">
-            <div class="resume__wrap">
-                <div class="resume__about">
-                    <div class="resume__about-name">
-                        <h1 class="resume__about-name-title">Николай Толкованов</h1>
-                        <p class="resume__about-name-subtitle">web-developer</p>
-                    </div>
-                    <div class="resume__about-contacts">
-                        <p class="resume__about-contacts-phone">T: +79616654412</p>
-                        <p class="resume__about-contacts-email">E: tnrvlg@gmail.com</p>
-                    </div>
-                </div>
-                <div class="resume__skills">
-                    <h2 class="resume__skills-title">Навыки</h2>
-                    <ul class="resume__list">
-                        <li class="resume__list-item">
-                            <h4 class="resume__list-item-title">Веб-разработка</h4>
-                            <p class="resume__list-item-text">
-                                — Создание одностраничных, многостраничных сайтов,
-                                SPA-приложений<br /><br />
-                                — Разработка сайтов под CMS Wordpress<br /><br />
-                                — Верстка страницы по стандартам HTML 5, CSS 3<br /><br />
-                                — Работаю с CSS-препроцессорами LESS, SASS<br /><br />
-                                — Владение ЯП: PHP, JS, PYTHON, JAVA<br /><br />
-                                — Активная работа с Git, Github<br /><br />
-                                — Владение фреймворком Vue.js<br /><br />
-                                — Работа с VS Code, Notepad++, Sublime Text<br /><br />
-                                — Работа с операционнымим системами Windows, Linux<br /><br />
-                            </p>
-                        </li>
-                        <li class="resume__list-item">
-                            <h4 class="resume__list-item-title">Коммуникабельность</h4>
-                            <p class="resume__list-item-text">
-                                — умение быстро знакомиться с людьми<br /><br />
-                                — умение понять проблему человека и как её решить<br /><br />
-                                — умение хорошо относиться к собеседнику<br /><br />
-                                — умение общаться с клиентами<br /><br />
-                            </p>
-                        </li>
-                        <li class="resume__list-item">
-                            <h4 class="resume__list-item-title">Личные качества</h4>
-                            <p class="resume__list-item-text">
-                                — ответственность<br /><br />
-                                — честность<br /><br />
-                                — любознательность<br /><br />
-                                — стрессоустойчивость<br /><br />
-                            </p>
-                        </li>
-                    </ul>
-                </div>
+          <div class="resume__wrap">
+            <div class="resume__about">
+              <div class="resume__about-name">
+                <h1 class="resume__about-name-title">Николай Толкованов</h1>
+                <p class="resume__about-name-subtitle">web-developer</p>
+              </div>
+              <div class="resume__about-contacts">
+                <p class="resume__about-contacts-phone">T: +79616654412</p>
+                <p class="resume__about-contacts-email">E: tnrvlg@gmail.com</p>
+              </div>
             </div>
+            <div class="resume__skills">
+              <ul class="resume__list">
+                <li class="resume__list-item">
+                  <h3 class="resume__list-item-title">Навыки Веб-разработки</h3>
+                  <ul class="resume__sublist">
+                    <li class="resume__sublist-item">
+                      Создание одностраничных, многостраничных сайтов, SPA-приложений
+                    </li>
+                    <li class="resume__sublist-item">
+                      Разработка сайтов на CMS Wordpress
+                    </li>
+                    <li class="resume__sublist-item">Владение фреймворком Vue.js</li>
+                    <li class="resume__sublist-item">
+                      Вёрстка страницы по стандартам HTML 5, CSS 3
+                    </li>
+                    <li class="resume__sublist-item">
+                      Работаю с CSS-препроцессорами LESS, SASS
+                    </li>
+                    <li class="resume__sublist-item">Владение ЯП: PHP, JS, PYTHON</li>
+                  </ul>
+                </li>
+                <li class="resume__list-item">
+                  <h3 class="resume__list-item-title">Интрументы</h3>
+                  <ul class="resume__sublist">
+                    <li class="resume__sublist-item">Активная работа с Git, Github</li>
+                    <li class="resume__sublist-item">
+                      Работа с VS Code, Notepad++, Sublime Text
+                    </li>
+                    <li class="resume__sublist-item">
+                      Работа с операционнымим системами Windows, Linux
+                    </li>
+                  </ul>
+                </li>
+                <li class="resume__list-item">
+                  <h3 class="resume__list-item-title">Проекты</h3>
+                  <ul class="resume__sublist">
+                    <li class="resume__sublist-item">
+                      <h4 class="resume__sublist-item-title">Vue-shop</h4>
+                      <ul class="resume__projects">
+                        <li class="resume__projects-item">
+                          <b>Задача</b>: собрать прототип небольшого интернет-магазина
+                          на Vue 3.
+                        </li>
+                        <li class="resume__projects-item">
+                          <b>Технологии:</b> Vue 3, Vue-Router, Vuex, Sass.
+                        </li>
+                        <li class="resume__projects-item">
+                          <b>Github:</b>
+                          https://github.com/NikolayTolkovanov-front/Vue-Shop
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="resume__sublist-item">
+                        <h4 class="resume__sublist-item-title">Cryptonomicon</h4>
+                        <ul class="resume__projects">
+                          <li class="resume__projects-item">
+                            <b>Задача</b>: написать приложение, которое отображает изменение
+                            цен криптовалют на Vue 3.
+                          </li>
+                          <li class="resume__projects-item">
+                            <b>Технологии:</b> Vue 3, Websockets, Tailwind CSS.
+                          </li>
+                          <li class="resume__projects-item">
+                            <b>Github:</b>
+                            https://github.com/NikolayTolkovanov-front/cryptonomicon
+                          </li>
+                        </ul>
+                      </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
     </div>
 </body>
