--- a/index.html
+++ b/index.html
@@ -100,34 +100,39 @@
                       <h4 class="resume__sublist-item-title">Vue-shop</h4>
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
-                          <b>Задача</b>: собрать прототип небольшого интернет-магазина
+                          <b class="resume__projects-item-name">Задача:</b> собрать прототип небольшого интернет-магазина
                           на Vue 3.
                         </li>
                         <li class="resume__projects-item">
-                          <b>Технологии:</b> Vue 3, Vue-Router, Vuex, Sass.
+                          <b class="resume__projects-item-name">Технологии:</b> Vue 3, Vue-Router, Vuex, Sass.
                         </li>
                         <li class="resume__projects-item">
-                          <b>Github:</b>
-                          https://github.com/NikolayTolkovanov-front/Vue-Shop
+                          <b class="resume__projects-item-name">Github:</b>
+                          <a class="resume__projects-item-link" target="_blank" href="https://github.com/NikolayTolkovanov-front/Vue-Shop"
+                            >https://github.com/NikolayTolkovanov-front/Vue-Shop</a
+                          >
                         </li>
                       </ul>
                     </li>
                     <li class="resume__sublist-item">
-                        <h4 class="resume__sublist-item-title">Cryptonomicon</h4>
-                        <ul class="resume__projects">
-                          <li class="resume__projects-item">
-                            <b>Задача</b>: написать приложение, которое отображает изменение
-                            цен криптовалют на Vue 3.
-                          </li>
-                          <li class="resume__projects-item">
-                            <b>Технологии:</b> Vue 3, Websockets, Tailwind CSS.
-                          </li>
-                          <li class="resume__projects-item">
-                            <b>Github:</b>
-                            https://github.com/NikolayTolkovanov-front/cryptonomicon
-                          </li>
-                        </ul>
-                      </li>
+                      <h4 class="resume__sublist-item-title">Cryptonomicon</h4>
+                      <ul class="resume__projects">
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Задача:</b> написать приложение, которое отображает
+                          изменение цен криптовалют на Vue 3.
+                        </li>
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Технологии:</b> Vue 3, Websockets, Tailwind CSS.
+                        </li>
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Github:</b>
+                          <a class="resume__projects-item-link" target="_blank"
+                            href="https://github.com/NikolayTolkovanov-front/cryptonomicon"
+                            >https://github.com/NikolayTolkovanov-front/cryptonomicon</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
               </ul>
