--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/vendor/styleVendor.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Резюме-Николай-Толкованов</title>
 </head>
@@ -93,14 +94,48 @@
                   </ul>
                 </li>
                 <li class="resume__list-item">
+                  <h3 class="resume__list-item-title">Опыт работы</h3>
+                  <ul class="resume__sublist">
+                    <li class="resume__sublist-item">
+                      <h4 class="resume__sublist-item-title">Фриланс</h4>
+                      <ul class="resume__projects">
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Какие задачи решал:</b>
+                          Доработка сайтов на Wordpress, разработка адаптивной и кроссбраузерной вёрстки
+                        </li>
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Время работы:</b>6 месяцев
+                        </li>
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Github:</b>
+                          <a class="resume__projects-item-link" target="_blank" href="https://github.com/NikolayTolkovanov-front/Vue-Shop"
+                            >https://github.com/NikolayTolkovanov-front/Vue-Shop</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="resume__sublist-item">
+                      <h4 class="resume__sublist-item-title">Компания Интерволга</h4>
+                      <ul class="resume__projects">
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Что делал:</b>Проходил стажировкуна backend-разработку
+                        </li>
+                        <li class="resume__projects-item">
+                          <b class="resume__projects-item-name">Время работы:</b> 1 месяц
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li class="resume__list-item">
                   <h3 class="resume__list-item-title">Проекты</h3>
                   <ul class="resume__sublist">
                     <li class="resume__sublist-item">
                       <h4 class="resume__sublist-item-title">Vue-shop</h4>
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Задача:</b> собрать прототип небольшого интернет-магазина
-                          на Vue 3.
+                          <b class="resume__projects-item-name">Задача:</b> Собрать прототип небольшого интернет-магазина
+                          на Vue 3
                         </li>
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Технологии:</b> Vue 3, Vue-Router, Vuex, Sass.
@@ -117,11 +152,11 @@
                       <h4 class="resume__sublist-item-title">Cryptonomicon</h4>
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Задача:</b> написать приложение, которое отображает
-                          изменение цен криптовалют на Vue 3.
+                          <b class="resume__projects-item-name">Задача:</b> Написать приложение, которое отображает
+                          изменение цен криптовалют на Vue 3
                         </li>
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Технологии:</b> Vue 3, Websockets, Tailwind CSS.
+                          <b class="resume__projects-item-name">Технологии:</b> Vue 3, Websockets, Tailwind CSS
                         </li>
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Github:</b>
