--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li class="resume__sublist-item">
                       Работаю с CSS-препроцессорами LESS, SASS
                     </li>
-                    <li class="resume__sublist-item">Владение ЯП: PHP, JS, PYTHON</li>
+                    <li class="resume__sublist-item">Владение языками программирования: PHP, JS, PYTHON</li>
                   </ul>
                 </li>
                 <li class="resume__list-item">
@@ -118,7 +118,7 @@
                       <h4 class="resume__sublist-item-title">Компания Интерволга</h4>
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Что делал:</b>Проходил стажировкуна backend-разработку
+                          <b class="resume__projects-item-name">Что делал:</b>Проходил стажировку на backend-разработчика
                         </li>
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Время работы:</b> 1 месяц
