--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Github:</b>
                           <a class="resume__projects-item-link" target="_blank"
-                            href="https://github.com/NikolayTolkovanov-front/cryptonomicon"
-                            >https://github.com/NikolayTolkovanov-front/cryptonomicon</a
+                            href="https://vue-cryptonomicon.github.io/"
+                            >https://vue-cryptonomicon.github.io/</a
                           >
                         </li>
                       </ul>
