--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="resume__skills">
               <ul class="resume__list">
                 <li class="resume__list-item">
-                  <h3 class="resume__list-item-title">Навыки Веб-разработки</h3>
+                  <h3 class="resume__list-item-title">Навыки</h3>
                   <ul class="resume__sublist">
                     <li class="resume__sublist-item">
                       Создание одностраничных, многостраничных сайтов, SPA-приложений
@@ -71,13 +71,14 @@
                       Разработка сайтов на CMS Wordpress
                     </li>
                     <li class="resume__sublist-item">Владение фреймворком Vue.js</li>
+                    <li class="resume__sublist-item">Базовое владение фреймворком React.js</li>
                     <li class="resume__sublist-item">
                       Вёрстка страницы по стандартам HTML 5, CSS 3
                     </li>
                     <li class="resume__sublist-item">
                       Работаю с CSS-препроцессорами LESS, SASS
                     </li>
-                    <li class="resume__sublist-item">Владение языками программирования: PHP, JS, PYTHON</li>
+                    <li class="resume__sublist-item">Владение языками программирования: PHP | JS | PYTHON | TYPESCRIPT</li>
                   </ul>
                 </li>
                 <li class="resume__list-item">
@@ -85,7 +86,7 @@
                   <ul class="resume__sublist">
                     <li class="resume__sublist-item">Активная работа с Git, Github</li>
                     <li class="resume__sublist-item">
-                      Работа с VS Code, Notepad++, Sublime Text
+                      Работа с VS Code, Webstorm
                     </li>
                     <li class="resume__sublist-item">
                       Работа с операционнымим системами Windows, Linux
@@ -103,13 +104,7 @@
                           Доработка сайтов на Wordpress, разработка адаптивной и кроссбраузерной вёрстки
                         </li>
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Время работы:</b>6 месяцев
-                        </li>
-                        <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Github:</b>
-                          <a class="resume__projects-item-link" target="_blank" href="https://github.com/NikolayTolkovanov-front/Vue-Shop"
-                            >https://github.com/NikolayTolkovanov-front/Vue-Shop</a
-                          >
+                          <b class="resume__projects-item-name">Время работы:</b>3 месяца
                         </li>
                       </ul>
                     </li>
