--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                           Доработка сайтов на Wordpress, разработка адаптивной и кроссбраузерной вёрстки
                         </li>
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Время работы:</b>3 месяца
+                          <b class="resume__projects-item-name">Время работы:</b>10 месяцев
                         </li>
                       </ul>
                     </li>
@@ -115,7 +115,7 @@
                           <b class="resume__projects-item-name">Что делал:</b>Проходил стажировку на backend-разработчика
                         </li>
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Время работы:</b> 1 месяц
+                          <b class="resume__projects-item-name">Время работы:</b> 2 месяца
                         </li>
                       </ul>
                     </li>
