--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="42b085b1f51b9f31" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Резюме-Николай-Толкованов</title>
 </head>
