Теперь без сборки
Удален яндекс веб-мастер

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="yandex-verification" content="42b085b1f51b9f31" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Резюме-Николай-Толкованов</title>
 </head>
@@ -102,21 +101,12 @@
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Какие задачи решал:</b>
-                          Доработка сайтов на Wordpress, разработка адаптивной и кроссбраузерной вёрстки
+                          Разработка сайтов и приложений на стеке Laravel + Vue.js<br>
+                          Вёрстка и доработка многостраничных сайтов,<br>
+                          Разработка и поддержка сайтов на cms Wordpress.
                         </li>
                         <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Время работы:</b>10 месяцев
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="resume__sublist-item">
-                      <h4 class="resume__sublist-item-title">Компания Интерволга</h4>
-                      <ul class="resume__projects">
-                        <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Что делал:</b>Проходил стажировку на backend-разработчика
-                        </li>
-                        <li class="resume__projects-item">
-                          <b class="resume__projects-item-name">Время работы:</b> 2 месяца
+                          <b class="resume__projects-item-name">Время работы:</b>3 года
                         </li>
                       </ul>
                     </li>
