Нормальный вид для блока фриланса

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                       <ul class="resume__projects">
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Какие задачи решал:</b>
-                          Разработка сайтов и приложений на стеке Laravel + Vue.js<br>
-                          Вёрстка и доработка многостраничных сайтов,<br>
-                          Разработка и поддержка сайтов на cms Wordpress.
+                          -Разработка сайтов и приложений на стеке Laravel + Vue.js<br><br>
+                          -Вёрстка и доработка многостраничных сайтов,<br><br>
+                          -Разработка и поддержка сайтов на cms Wordpress.
                         </li>
                         <li class="resume__projects-item">
                           <b class="resume__projects-item-name">Время работы:</b>3 года
